Tue Feb 15 10:11:12 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Events/client.cpp:
          Added quotes.

Tue Feb 15 10:07:30 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Events/client.cpp:
          Resolved issues related to include paths.

Tue Feb 15 09:20:07 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ciao_tests.lst:
          One dds test should now run again

Mon Feb 14 08:35:26 UTC 2011  Marcel Smit  <msmit@remedy.nl>

        * tests/CIF/Events/client.cpp:
          Resolved warnings in case lw ccm.

Fri Feb 11 11:16:00 UTC 2011  Martin Corino  <mcorino@remedy.nl>

        Merged changes from Remedy work branch.

        === start changelog ===

        Thu Feb 10 09:59:48 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * bin/generate_component_mpc.pl:
                  Fixed the afters for the servants.

                * tutorials/Quoter/Simple/Broker/StockBroker.mpc:
                * tutorials/Quoter/Simple/Distributor/StockDistributor.mpc:
                  Regenerated using the latest generate_component_mpc

        Wed Feb  9 12:27:18 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * bin/generate_component_mpc.pl:
                  Fixed some layout issues in the generated MPC code.

                * tutorials/Quoter/Simple/01.html:
                  Added additional information regarding generate_component_mpc.

                * tutorials/Quoter/Simple/Broker/StockBroker.mpc:
                * tutorials/Quoter/Simple/Distributor/StockDistributor.mpc:
                * tutorials/Quoter/Simple/Stock_Base/Stock_Base.mpc:
                  Regenerated.

        Wed Feb  9 09:43:20 UTC 2011  Marcel Smit  <msmit@remedy.nl>

                * bin/generate_component_mpc.pl:
                * tutorials/Quoter/Simple/Broker/StockBroker.mpc:
                * tutorials/Quoter/Simple/Distributor/StockDistributor.mpc: